# cw-dice

./: Cargo.toml  NOTICE  README.md
.cargo/: config
contracts/cw-dice/: Cargo.toml
contracts/cw-dice/schema/: cw-dice.json
contracts/cw-dice/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_history.json  response_to_get_player.json  response_to_get_status.json
contracts/cw-dice/src/: contract.rs  error.rs  helpers.rs  lib.rs  models.rs  msg.rs  state.rs
contracts/cw-dice/src/execute/: create_bet.rs  deposit_house.rs  mod.rs  transfer_ownership.rs  update_setting.rs  withdraw_house.rs
contracts/cw-dice/src/query/: get_history.rs  get_player.rs  get_status.rs  mod.rs
contracts/cw-dice/src/test/: mod.rs  utils.rs
scripts/: optimizer.sh  publish.sh
